// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReputationProfile snapshot – custom maxScore matches snapshot with maxScore=10 1`] = `
<section
  aria-labelledby="profile-heading"
  class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <h2
      class="sr-only"
      id="profile-heading"
    >
      Reputation profile for 
      Scaled User
    </h2>
    <div
      class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
        >
          S
        </div>
        <div>
          <p
            class="text-sm font-medium text-slate-500"
          >
            Reputation profile
          </p>
          <h1
            class="text-2xl font-semibold text-slate-950"
          >
            Scaled User
          </h1>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Privacy-friendly defaults
        </p>
        <p
          class="text-sm leading-6"
        >
          Only summary trust signals are shown by default. Sensitive metadata remains hidden.
        </p>
      </div>
    </div>
    <div
      class="mt-8 grid gap-4 sm:grid-cols-3"
    >
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-score-label"
        >
          Reputation score
        </p>
        <p
          aria-labelledby="reputation-score-label"
          class="mt-3 text-3xl font-semibold text-slate-950"
        >
          <span
            aria-describedby="reputation-legend"
            aria-labelledby="reputation-score-label"
            aria-valuemax="10"
            aria-valuemin="0"
            aria-valuenow="7.5"
            role="meter"
          >
            <span
              class="sr-only"
            >
              Reputation score 
            </span>
            7.5
            <span
              class="sr-only"
            >
               out of 
              10
            </span>
          </span>
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-level-label"
        >
          Level
        </p>
        <p
          aria-labelledby="reputation-level-label"
          class="mt-3 text-xl font-semibold text-slate-950"
        >
          <span
            class="sr-only"
          >
            Level 
          </span>
          Trusted Partner
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Explanation
        </p>
        <p
          class="mt-3 text-sm leading-6 text-slate-700"
        >
          Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
        </p>
      </div>
    </div>
    <div
      class="mt-6 border-t border-slate-200 pt-6"
    >
      <h2
        class="text-sm font-semibold text-slate-900"
        id="reputation-legend-title"
      >
        Reputation Level Legend
      </h2>
      <ul
        aria-labelledby="reputation-legend-title"
        class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
        id="reputation-legend"
      >
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            0.0
             - 
            2.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Newcomer
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            2.0
             - 
            4.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            4.0
             - 
            6.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Active Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            6.0
             - 
            8.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Trusted Partner
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            8.0
             - 
            10.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Expert
          </p>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <div
      class="mb-6 flex items-center justify-between gap-4"
    >
      <div>
        <h2
          class="text-xl font-semibold text-slate-950"
        >
          Reputation history
        </h2>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          History is shown as safe, aggregated events with no wallet or personal metadata by default.
        </p>
      </div>
      <span
        class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
      >
        Visible
      </span>
    </div>
    <ol
      class="space-y-4"
    >
      <li
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <div
          class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
        >
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Verification
            </p>
            <p
              class="mt-1 text-base font-semibold text-slate-950"
            >
              Completed identity verification
            </p>
          </div>
          <time
            class="text-sm text-slate-500"
            datetime="2026-04-24"
          >
            2026-04-24
          </time>
        </div>
      </li>
      <li
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <div
          class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
        >
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              On-chain review
            </p>
            <p
              class="mt-1 text-base font-semibold text-slate-950"
            >
              Received positive trust signal
            </p>
          </div>
          <time
            class="text-sm text-slate-500"
            datetime="2026-04-23"
          >
            2026-04-23
          </time>
        </div>
      </li>
      <li
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <div
          class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
        >
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Referral
            </p>
            <p
              class="mt-1 text-base font-semibold text-slate-950"
            >
              Referred two new community members
            </p>
          </div>
          <time
            class="text-sm text-slate-500"
            datetime="2026-04-20"
          >
            2026-04-20
          </time>
        </div>
      </li>
    </ol>
  </div>
</section>
`;

exports[`ReputationProfile snapshot – edge: score === 0 matches snapshot (falsy-but-valid score) 1`] = `
<section
  aria-labelledby="profile-heading"
  class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <h2
      class="sr-only"
      id="profile-heading"
    >
      Reputation profile for 
      New Member
    </h2>
    <div
      class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
        >
          N
        </div>
        <div>
          <p
            class="text-sm font-medium text-slate-500"
          >
            Reputation profile
          </p>
          <h1
            class="text-2xl font-semibold text-slate-950"
          >
            New Member
          </h1>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Privacy-friendly defaults
        </p>
        <p
          class="text-sm leading-6"
        >
          Only summary trust signals are shown by default. Sensitive metadata remains hidden.
        </p>
      </div>
    </div>
    <div
      class="mt-8 grid gap-4 sm:grid-cols-3"
    >
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-score-label"
        >
          Reputation score
        </p>
        <p
          aria-labelledby="reputation-score-label"
          class="mt-3 text-3xl font-semibold text-slate-950"
        >
          <span
            aria-describedby="reputation-legend"
            aria-labelledby="reputation-score-label"
            aria-valuemax="5"
            aria-valuemin="0"
            aria-valuenow="0"
            role="meter"
          >
            <span
              class="sr-only"
            >
              Reputation score 
            </span>
            0
            <span
              class="sr-only"
            >
               out of 
              5
            </span>
          </span>
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-level-label"
        >
          Level
        </p>
        <p
          aria-labelledby="reputation-level-label"
          class="mt-3 text-xl font-semibold text-slate-950"
        >
          <span
            class="sr-only"
          >
            Level 
          </span>
          Newcomer
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Explanation
        </p>
        <p
          class="mt-3 text-sm leading-6 text-slate-700"
        >
          Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
        </p>
      </div>
    </div>
    <div
      class="mt-6 border-t border-slate-200 pt-6"
    >
      <h2
        class="text-sm font-semibold text-slate-900"
        id="reputation-legend-title"
      >
        Reputation Level Legend
      </h2>
      <ul
        aria-labelledby="reputation-legend-title"
        class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
        id="reputation-legend"
      >
        <li
          class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            0.0
             - 
            1.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Newcomer
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            1.0
             - 
            2.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            2.0
             - 
            3.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Active Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            3.0
             - 
            4.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Trusted Partner
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            4.0
             - 
            5.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Expert
          </p>
        </li>
      </ul>
    </div>
    <div
      class="mt-6 rounded-3xl border border-amber-200 bg-amber-50 p-4 text-amber-900"
    >
      <p
        class="font-semibold"
      >
        Partial reputation data
      </p>
      <p
        class="mt-1 text-sm leading-6"
      >
        A score exists but history is currently hidden until verified actions are available. This keeps your profile safe and private.
      </p>
    </div>
  </div>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <div
      class="mb-6 flex items-center justify-between gap-4"
    >
      <div>
        <h2
          class="text-xl font-semibold text-slate-950"
        >
          Reputation history
        </h2>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          History is shown as safe, aggregated events with no wallet or personal metadata by default.
        </p>
      </div>
      <span
        class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
      >
        Private by default
      </span>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-slate-50 p-6 text-slate-700"
    >
      <p
        class="font-semibold text-slate-900"
      >
        No reputation history available yet.
      </p>
      <p
        class="mt-2 text-sm leading-6"
      >
        Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
      </p>
    </div>
  </div>
</section>
`;

exports[`ReputationProfile snapshot – full reputation (score + history) matches snapshot with history events 1`] = `
<section
  aria-labelledby="profile-heading"
  class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <h2
      class="sr-only"
      id="profile-heading"
    >
      Reputation profile for 
      Verified User
    </h2>
    <div
      class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
        >
          V
        </div>
        <div>
          <p
            class="text-sm font-medium text-slate-500"
          >
            Reputation profile
          </p>
          <h1
            class="text-2xl font-semibold text-slate-950"
          >
            Verified User
          </h1>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Privacy-friendly defaults
        </p>
        <p
          class="text-sm leading-6"
        >
          Only summary trust signals are shown by default. Sensitive metadata remains hidden.
        </p>
      </div>
    </div>
    <div
      class="mt-8 grid gap-4 sm:grid-cols-3"
    >
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-score-label"
        >
          Reputation score
        </p>
        <p
          aria-labelledby="reputation-score-label"
          class="mt-3 text-3xl font-semibold text-slate-950"
        >
          <span
            aria-describedby="reputation-legend"
            aria-labelledby="reputation-score-label"
            aria-valuemax="5"
            aria-valuemin="0"
            aria-valuenow="3.8"
            role="meter"
          >
            <span
              class="sr-only"
            >
              Reputation score 
            </span>
            3.8
            <span
              class="sr-only"
            >
               out of 
              5
            </span>
          </span>
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-level-label"
        >
          Level
        </p>
        <p
          aria-labelledby="reputation-level-label"
          class="mt-3 text-xl font-semibold text-slate-950"
        >
          <span
            class="sr-only"
          >
            Level 
          </span>
          Trusted Partner
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Explanation
        </p>
        <p
          class="mt-3 text-sm leading-6 text-slate-700"
        >
          Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
        </p>
      </div>
    </div>
    <div
      class="mt-6 border-t border-slate-200 pt-6"
    >
      <h2
        class="text-sm font-semibold text-slate-900"
        id="reputation-legend-title"
      >
        Reputation Level Legend
      </h2>
      <ul
        aria-labelledby="reputation-legend-title"
        class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
        id="reputation-legend"
      >
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            0.0
             - 
            1.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Newcomer
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            1.0
             - 
            2.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            2.0
             - 
            3.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Active Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            3.0
             - 
            4.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Trusted Partner
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            4.0
             - 
            5.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Expert
          </p>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <div
      class="mb-6 flex items-center justify-between gap-4"
    >
      <div>
        <h2
          class="text-xl font-semibold text-slate-950"
        >
          Reputation history
        </h2>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          History is shown as safe, aggregated events with no wallet or personal metadata by default.
        </p>
      </div>
      <span
        class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
      >
        Visible
      </span>
    </div>
    <ol
      class="space-y-4"
    >
      <li
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <div
          class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
        >
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Verification
            </p>
            <p
              class="mt-1 text-base font-semibold text-slate-950"
            >
              Completed identity verification
            </p>
          </div>
          <time
            class="text-sm text-slate-500"
            datetime="2026-04-24"
          >
            2026-04-24
          </time>
        </div>
      </li>
      <li
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <div
          class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
        >
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              On-chain review
            </p>
            <p
              class="mt-1 text-base font-semibold text-slate-950"
            >
              Received positive trust signal
            </p>
          </div>
          <time
            class="text-sm text-slate-500"
            datetime="2026-04-23"
          >
            2026-04-23
          </time>
        </div>
      </li>
      <li
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <div
          class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between"
        >
          <div>
            <p
              class="text-sm font-medium text-slate-500"
            >
              Referral
            </p>
            <p
              class="mt-1 text-base font-semibold text-slate-950"
            >
              Referred two new community members
            </p>
          </div>
          <time
            class="text-sm text-slate-500"
            datetime="2026-04-20"
          >
            2026-04-20
          </time>
        </div>
      </li>
    </ol>
  </div>
</section>
`;

exports[`ReputationProfile snapshot – no reputation (null score) matches snapshot 1`] = `
<section
  aria-labelledby="profile-heading"
  class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <h2
      class="sr-only"
      id="profile-heading"
    >
      Reputation profile for 
      Legacy User
    </h2>
    <div
      class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
        >
          L
        </div>
        <div>
          <p
            class="text-sm font-medium text-slate-500"
          >
            Reputation profile
          </p>
          <h1
            class="text-2xl font-semibold text-slate-950"
          >
            Legacy User
          </h1>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Privacy-friendly defaults
        </p>
        <p
          class="text-sm leading-6"
        >
          Only summary trust signals are shown by default. Sensitive metadata remains hidden.
        </p>
      </div>
    </div>
    <div
      class="mt-8 grid gap-4 sm:grid-cols-3"
    >
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-score-label"
        >
          Reputation score
        </p>
        <p
          aria-labelledby="reputation-score-label"
          class="mt-3 text-3xl font-semibold text-slate-950"
        >
          No reputation yet
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-level-label"
        >
          Level
        </p>
        <p
          aria-labelledby="reputation-level-label"
          class="mt-3 text-xl font-semibold text-slate-950"
        >
          Pending
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Explanation
        </p>
        <p
          class="mt-3 text-sm leading-6 text-slate-700"
        >
          Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <div
      class="mb-6 flex items-center justify-between gap-4"
    >
      <div>
        <h2
          class="text-xl font-semibold text-slate-950"
        >
          Reputation history
        </h2>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          History is shown as safe, aggregated events with no wallet or personal metadata by default.
        </p>
      </div>
      <span
        class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
      >
        Private by default
      </span>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-slate-50 p-6 text-slate-700"
    >
      <p
        class="font-semibold text-slate-900"
      >
        No reputation history available yet.
      </p>
      <p
        class="mt-2 text-sm leading-6"
      >
        Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
      </p>
    </div>
  </div>
</section>
`;

exports[`ReputationProfile snapshot – no reputation (undefined score) matches snapshot 1`] = `
<section
  aria-labelledby="profile-heading"
  class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <h2
      class="sr-only"
      id="profile-heading"
    >
      Reputation profile for 
      Guest User
    </h2>
    <div
      class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
        >
          G
        </div>
        <div>
          <p
            class="text-sm font-medium text-slate-500"
          >
            Reputation profile
          </p>
          <h1
            class="text-2xl font-semibold text-slate-950"
          >
            Guest User
          </h1>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Privacy-friendly defaults
        </p>
        <p
          class="text-sm leading-6"
        >
          Only summary trust signals are shown by default. Sensitive metadata remains hidden.
        </p>
      </div>
    </div>
    <div
      class="mt-8 grid gap-4 sm:grid-cols-3"
    >
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-score-label"
        >
          Reputation score
        </p>
        <p
          aria-labelledby="reputation-score-label"
          class="mt-3 text-3xl font-semibold text-slate-950"
        >
          No reputation yet
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-level-label"
        >
          Level
        </p>
        <p
          aria-labelledby="reputation-level-label"
          class="mt-3 text-xl font-semibold text-slate-950"
        >
          Pending
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Explanation
        </p>
        <p
          class="mt-3 text-sm leading-6 text-slate-700"
        >
          Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <div
      class="mb-6 flex items-center justify-between gap-4"
    >
      <div>
        <h2
          class="text-xl font-semibold text-slate-950"
        >
          Reputation history
        </h2>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          History is shown as safe, aggregated events with no wallet or personal metadata by default.
        </p>
      </div>
      <span
        class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
      >
        Private by default
      </span>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-slate-50 p-6 text-slate-700"
    >
      <p
        class="font-semibold text-slate-900"
      >
        No reputation history available yet.
      </p>
      <p
        class="mt-2 text-sm leading-6"
      >
        Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
      </p>
    </div>
  </div>
</section>
`;

exports[`ReputationProfile snapshot – partial reputation (score, no history) matches snapshot with amber banner 1`] = `
<section
  aria-labelledby="profile-heading"
  class="w-full max-w-5xl mx-auto space-y-8 px-4 py-10 sm:px-6 lg:px-8"
>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <h2
      class="sr-only"
      id="profile-heading"
    >
      Reputation profile for 
      Partial User
    </h2>
    <div
      class="flex flex-col gap-6 lg:flex-row lg:items-center lg:justify-between"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="flex h-16 w-16 items-center justify-center rounded-2xl bg-slate-900 text-2xl font-semibold text-white"
        >
          P
        </div>
        <div>
          <p
            class="text-sm font-medium text-slate-500"
          >
            Reputation profile
          </p>
          <h1
            class="text-2xl font-semibold text-slate-950"
          >
            Partial User
          </h1>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 rounded-3xl bg-slate-50 p-4 text-slate-700 sm:p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Privacy-friendly defaults
        </p>
        <p
          class="text-sm leading-6"
        >
          Only summary trust signals are shown by default. Sensitive metadata remains hidden.
        </p>
      </div>
    </div>
    <div
      class="mt-8 grid gap-4 sm:grid-cols-3"
    >
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-score-label"
        >
          Reputation score
        </p>
        <p
          aria-labelledby="reputation-score-label"
          class="mt-3 text-3xl font-semibold text-slate-950"
        >
          <span
            aria-describedby="reputation-legend"
            aria-labelledby="reputation-score-label"
            aria-valuemax="5"
            aria-valuemin="0"
            aria-valuenow="2.5"
            role="meter"
          >
            <span
              class="sr-only"
            >
              Reputation score 
            </span>
            2.5
            <span
              class="sr-only"
            >
               out of 
              5
            </span>
          </span>
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
          id="reputation-level-label"
        >
          Level
        </p>
        <p
          aria-labelledby="reputation-level-label"
          class="mt-3 text-xl font-semibold text-slate-950"
        >
          <span
            class="sr-only"
          >
            Level 
          </span>
          Active Contributor
        </p>
      </div>
      <div
        class="rounded-3xl border border-slate-200 bg-slate-50 p-5"
      >
        <p
          class="text-sm font-medium text-slate-500"
        >
          Explanation
        </p>
        <p
          class="mt-3 text-sm leading-6 text-slate-700"
        >
          Reputation represents verified trust signals and activity history, not sensitive personal metadata. Privacy-friendly defaults keep your profile safe.
        </p>
      </div>
    </div>
    <div
      class="mt-6 border-t border-slate-200 pt-6"
    >
      <h2
        class="text-sm font-semibold text-slate-900"
        id="reputation-legend-title"
      >
        Reputation Level Legend
      </h2>
      <ul
        aria-labelledby="reputation-legend-title"
        class="mt-3 grid gap-3 sm:grid-cols-5 text-sm"
        id="reputation-legend"
      >
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            0.0
             - 
            1.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Newcomer
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            1.0
             - 
            2.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-indigo-200 bg-indigo-50/50 text-indigo-900 font-semibold"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            2.0
             - 
            3.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Active Contributor
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            3.0
             - 
            4.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Trusted Partner
          </p>
        </li>
        <li
          class="rounded-2xl border p-3 transition-colors border-slate-200 bg-slate-50/50 text-slate-600"
        >
          <p
            class="font-bold text-xs uppercase tracking-wider text-slate-400"
          >
            4.0
             - 
            5.0
          </p>
          <p
            class="mt-1 text-sm"
          >
            Expert
          </p>
        </li>
      </ul>
    </div>
    <div
      class="mt-6 rounded-3xl border border-amber-200 bg-amber-50 p-4 text-amber-900"
    >
      <p
        class="font-semibold"
      >
        Partial reputation data
      </p>
      <p
        class="mt-1 text-sm leading-6"
      >
        A score exists but history is currently hidden until verified actions are available. This keeps your profile safe and private.
      </p>
    </div>
  </div>
  <div
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm sm:p-8"
  >
    <div
      class="mb-6 flex items-center justify-between gap-4"
    >
      <div>
        <h2
          class="text-xl font-semibold text-slate-950"
        >
          Reputation history
        </h2>
        <p
          class="mt-1 text-sm text-slate-500"
        >
          History is shown as safe, aggregated events with no wallet or personal metadata by default.
        </p>
      </div>
      <span
        class="rounded-full bg-slate-100 px-3 py-1 text-xs font-medium uppercase tracking-[0.18em] text-slate-600"
      >
        Private by default
      </span>
    </div>
    <div
      class="rounded-3xl border border-slate-200 bg-slate-50 p-6 text-slate-700"
    >
      <p
        class="font-semibold text-slate-900"
      >
        No reputation history available yet.
      </p>
      <p
        class="mt-2 text-sm leading-6"
      >
        Reputation history appears once you complete verified actions. Your profile remains safe and privacy-friendly until then.
      </p>
    </div>
  </div>
</section>
`;
